--- a/module_hero/module_hero.routing.yml
+++ b/module_hero/module_hero.routing.yml
@@ -13,3 +13,11 @@ module_hero.heroform:
     _title: 'Who will win'
   requirements:
     _permission: 'access content'
+
+module_hero.exampleform:
+  path: '/example-form'
+  defaults:
+    _form: '\Drupal\module_hero\Form\ExampleForm'
+    _title: 'Example Form'
+  requirements:
+    _permission: 'access content'
